added new function

--- a/20sep/index.html
+++ b/20sep/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./script.js"></script>
+    <!-- <script src="./script.js"></script> -->
+
+     <!-- calling function compare after clicking on button   -->    
+    <button onclick="compare();">click</button> 
+
+   <script src="./script2.js"></script>
 </body>
 </html>
