--- a/21sep/index.html
+++ b/21sep/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1 id="heading">HELLO</h1>
     <div id="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate iure praesentium totam dolore excepturi repellat accusamus tempora magni delectus. Sit perferendis ad voluptates illo facere nobis quod obcaecati tenetur dicta ab, sint ratione officiis delectus sunt dolorem earum recusandae fuga.</div>
+    <!-- onclick is an event here -->
     <button onclick="dom();"> click me </button>
     <script src="./script.js"></script>
 </body>
