--- a/25sep/index.html
+++ b/25sep/index.html
@@ -6,7 +6,17 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <ul>
+        <li>JFSD</li>
+        <li>JFSD</li>
+        <li>JFSD</li>
+        <li>JFSD</li>
+        <li>JFSD</li>
+        <li>JFSD</li>
+        <li>JFSD</li>
+    </ul>
+    <button onclick="run();"> CLICK ME</button>
+    <!-- <img id="photo" onmouseenter="run();" width="400px" height="500px" src="./blog4.jpg" alt=""> -->
     <script src="./script.js"> </script>
 </body>
 </html>
