--- a/26 sep/registration.html
+++ b/26 sep/registration.html
@@ -29,7 +29,8 @@
         <input type=" text" id="secondName" placeholder="Second Name"> <br>
         <input type="email" id="email" placeholder="Email"> <br>
         <input type="password" id="password" placeholder="Enter password"> <br>
-        <input type="number" id="number" placeholder="Enter Mobile Number"> <br>
+        <input type="password" id="confirmpassword" placeholder="Confirm password"> <br>
+        <input type="tel" id="number" placeholder="Enter Mobile Number"> <br>
         <input type="text" id="course" placeholder="Enter Enrolled Course"> <br>
         <button onclick="return data();">SUBMIT</button>
     </form>
