--- a/27sep/registration.html
+++ b/27sep/registration.html
@@ -27,9 +27,11 @@
     <form action="">
         <div id="errorname"></div>
         <input type="text" id="name" placeholder="First Name"> <br>
-        <div id="erroremail"></div>
+        <div id="errorsecondname"></div>
         <input type=" text" id="secondName" placeholder="Second Name"> <br>
+        <div id="erroremail"></div>
         <input type="email" id="email" placeholder="Email"> <br>
+        <div id="errorpassword"></div>
         <input type="password" id="password" placeholder="Enter password"> <br>
         <input type="password" id="confirmpassword" placeholder="Confirm password"> <br>
         <input type="tel" id="number" placeholder="Enter Mobile Number"> <br>
