made registration feild mandatory using inner html

--- a/27sep/registration.html
+++ b/27sep/registration.html
@@ -11,9 +11,11 @@
             justify-content: center;
             align-items: center;
             gap: 5px;
+        
         }
         input{
-            padding: 0px 10px;
+            padding: 0px 20px;
+            
         }
         h1{
             text-align: center;
@@ -33,9 +35,10 @@
         <input type="email" id="email" placeholder="Email"> <br>
         <div id="errorpassword"></div>
         <input type="password" id="password" placeholder="Enter password"> <br>
+        <div id="errorCpass"></div>
         <input type="password" id="confirmpassword" placeholder="Confirm password"> <br>
+        <div id="errorphone"></div>
         <input type="tel" id="number" placeholder="Enter Mobile Number"> <br>
-        <input type="text" id="course" placeholder="Enter Enrolled Course"> <br>
         <button onclick="return data();">SUBMIT</button>
     </form>
     <script src="./registration.js"></script>
