red outline dissapearing after clicking on onblur event

--- a/27sep/registration.html
+++ b/27sep/registration.html
@@ -34,16 +34,16 @@
         <input type=" text" id="secondName" placeholder="Second Name" onblur="s();"> <br>
 
         <div id="erroremail"></div>
-        <input type="email" id="email" placeholder="Email"> <br>
+        <input type="email" id="email" placeholder="Email" onblur="s();"> <br>
 
         <div id="errorpassword"></div>
-        <input type="password" id="password" placeholder="Enter password"> <br>
+        <input type="password" id="password" placeholder="Enter password" onblur="s();"> <br>
 
         <div id="errorCpass"></div>
-        <input type="password" id="confirmpassword" placeholder="Confirm password"> <br>
+        <input type="password" id="confirmpassword" placeholder="Confirm password" onblur="s();"> <br>
 
         <div id="errorphone"></div>
-        <input type="tel" id="number" placeholder="Enter Mobile Number"> <br>
+        <input type="tel" id="number" placeholder="Enter Mobile Number" onblur="s();"> <br>
         <button onclick="return data();">SUBMIT</button>
     </form>
     <script src="./registration.js"></script>
