function call using parameter

--- a/01oct/validation.html
+++ b/01oct/validation.html
@@ -6,6 +6,13 @@
     <title>Document</title>
 </head>
 <body>
+
+    <button onclick="s(1);">CLICK 1</button>
+    <button onclick="s(2);">CLICK 2</button>
+    <button onclick="s(3);">CLICK 3</button>
+    <button onclick="s(4);">CLICK 4</button>
+    <button onclick="s(5);">CLICK 5</button>
+    <button onclick="s(6);">CLICK 6</button>
     <script src="./validation.js"></script>
 </body>
 </html>
