validation for emmail and phone number

--- a/01oct/registration.html
+++ b/01oct/registration.html
@@ -43,6 +43,7 @@
         <input type="password" id="confirmpassword" placeholder="Confirm password" onblur="s(confirmpassword);"> <br>
 
         <div id="errornumber"></div>
+        <!-- input type number also have e - for exp -->
         <input type="tel" id="number" placeholder="Enter Mobile Number" onblur="s('number');"> <br>
         <button onclick="return data();">SUBMIT</button>
     </form>
