--- a/04 oct/time.html
+++ b/04 oct/time.html
@@ -4,8 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        #website{
+            display: none;
+        }
+        #img{
+            width: 100px;
+            border-radius: 30px;
+            height: 100px;
+            margin-top: 15%;
+
+        }
+    </style>
 </head>
-<body>
+<body onload="loading()">
+    <center><img src="./blog4.jpg" alt="" id="img"></center>
+    <section id="website">
+ <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta harum accusantium impedit, consequatur consectetur autem veniam, rerum beatae molestias quisquam dolore numquam atque error sequi in. Aspernatur, esse ratione laudantium cumque, quam deleniti fugiat sed corrupti, modi facilis quidem! Laboriosam.</h1>
+ <h3>HELLO</h3>
+ <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet consequuntur sapiente ratione, dolore deserunt commodi expedita nisi hic quos reprehenderit ad optio quasi repellendus voluptas harum tenetur. Consectetur modi voluptas maxime praesentium, repudiandae ad, veritatis facilis quis ipsum non ullam dignissimos possimus, harum sunt doloribus quibusdam adipisci amet minima? Nostrum unde ipsam illo! Sequi doloremque explicabo maiores deleniti, vel aliquam?</p>
+ </section>
     <script src="./time.js"></script>
 </body>
 </html>
