--- a/parctice/registration.html
+++ b/parctice/registration.html
@@ -8,14 +8,16 @@
 <body>
     <form action="">
         <div id="errorname"></div>
-        <input type="text" id="name" placeholder="name"> <br>
+        <input type="text" id="name" placeholder="name" onblur="leaving('name')"> <br>
         <div id="erroremail"></div>
-        <input type="email" id="email" placeholder="email"> <br>
+        <input type="email" id="email" placeholder="email" onblur="leaving('email')"> <br>
         <div id="errorpassword"></div>
-        <input type="password" id="password" placeholder="password"> <br>
-        <input type="password" id="Cpassword" placeholder="confirm password"> <br>
-        <input type="phone" id="phone" placeholder="phone number"> <br>
-        <button type="submit" onclick="return data();">SUBMIT FORM</button>
+        <input type="password" id="password" placeholder="password" onblur="leaving('password')"> <br>
+        <div id="errorCpassword"></div>
+        <input type="password" id="Cpassword" placeholder="confirm password" onblur="leaving('Cpassword')"> <br>
+        <div id="errorphone"></div>
+        <input type="phone" id="phone" placeholder="phone number" onblur="leaving('phone')"> <br>
+        <button onclick="return data();">SUBMIT FORM</button>
         
         
 
