--- a/parctice/average.html
+++ b/parctice/average.html
@@ -7,7 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <label for="num1">Enter Number 1</label>
+    <input type="text" name="" id="num1"> <br>
+    <label for="num2">Enter Number 2</label>
+    <input type="text" name="" id="num2"> <br> 
+    <label for="num3">Enter Number 2</label>
+    <input type="text" name="" id="num3"> <br>
+    <button onclick="average();">FIND SUM</button>
+    <div id="result"></div>
     <script src="./average.js"></script>
 </body>
 </html>
