--- a/array/map.html
+++ b/array/map.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
+    <div id="answer"></div>
+    <button onclick="run()">click here</button>
     <script src="./map.js"></script>
 </body>
 </html>
