--- a/storage/index.html
+++ b/storage/index.html
@@ -8,14 +8,13 @@
 <body>
     <form action="">
         <input type="text" placeholder="enter name" id="name">
-        <input type="text" placeholder="enter email" id="email">
-        <input type="text" placeholder="enter course" id="course">
+        <input type="text" placeholder="enter contact" id="contact">
+        <input type="text" placeholder="enter age" id="age">
     </form>
     <button onclick="send()">SUBMIT</button>
     <h2 id="first"></h2>
     <h2 id="second"></h2>
     <h2 id="third"></h2>
-    <script src="./form.js"></script>
-    
+    <script src="./script.js"></script>
 </body>
 </html>
