--- a/storage/index.html
+++ b/storage/index.html
@@ -6,12 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="">
+    <form action="/storage/login.html">
         <input type="text" placeholder="enter name" id="name">
         <input type="text" placeholder="enter contact" id="contact">
         <input type="text" placeholder="enter age" id="age">
+         <button onclick="send()">SUBMIT</button>
     </form>
-    <button onclick="send()">SUBMIT</button>
+   
     <h2 id="first"></h2>
     <h2 id="second"></h2>
     <h2 id="third"></h2>
