perforemed read and delete

--- a/JSON/index2.html
+++ b/JSON/index2.html
@@ -6,7 +6,20 @@
     <title>Document</title>
 </head>
 <body>
-    <section id="output"></section>
+    <!-- <section id="output"></section> -->
+    <!-- shoiwng data in table form -->
+    <table border="">
+        <thead>
+            <th>ID</th>
+            <th>Name</th>
+            <th>Age</th>
+            <th>Course</th>
+            <th>Delete</th>
+           
+        </thead>
+        <tbody id="output"></tbody>
+       
+    </table>
     <script src="./index.js"></script>
 </body>
 </html>
