--- a/JSON/index2.html
+++ b/JSON/index2.html
@@ -20,6 +20,7 @@
         <tbody id="output"></tbody>
        
     </table>
+    <div id="editable"></div>
     <script src="./index.js"></script>
 </body>
 </html>
