--- a/JSON/insert.html
+++ b/JSON/insert.html
@@ -8,11 +8,11 @@
 <body>
     <form action="">
         <label for="">Name</label>
-         <input type="text"  id="name">
+         <input type="text"  id="name"> <br><br>
           <label for="">Age</label>
-         <input type="text"  id="age">
+         <input type="text"  id="age"> <br><br> 
           <label for="">Course</label>
-         <input type="text"  id="course">
+         <input type="text"  id="course"> <br><br>
         
     </form>
     <button onclick="submitData()">SUBMIT</button>
