update operation sucessfull

--- a/JSON/index2.html
+++ b/JSON/index2.html
@@ -15,6 +15,7 @@
             <th>Age</th>
             <th>Course</th>
             <th>Delete</th>
+            <th>Edit</th>
            
         </thead>
         <tbody id="output"></tbody>
