--- a/jQuery/index2.html
+++ b/jQuery/index2.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1 class="head1">Lorem ipsum dolor sit amet.</h1>
+    <h1 class="head2">MANYA</h1>
+    <p id="para1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus pariatur tenetur voluptatibus odit enim eveniet veniam nostrum debitis voluptas quam!</p>
+    <button id="btn1">slideUp</button>
+    <button id="btn2">slideDown</button>
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <script src="./second.js"></script>
 </body>
